build: adding consistent providing of run flags (#117)